[tool.poetry]
name = "exifmap"
version = "0.1.0"
description = "Plot images at the locations they were taken"
authors = ["Shohan Hasan <shohan.hasan.x6@gmail.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.7"
exif = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
